# ARES-AGENT

./: .env.example  .gitignore  Cargo.toml  README.md  TRAILMARK_ANALYSIS.md  VARIANT-ANALYSIS.md  VULN-FINDINGS.json  VULN-FINDINGS.md  audit.toml  deny.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
crates/ares-api/: Cargo.toml
crates/ares-api/src/: auth.rs  lib.rs  routes.rs  ssrf.rs  state.rs  webhook.rs
crates/ares-cli/: Cargo.toml
crates/ares-cli/src/: commands.rs  main.rs
crates/ares-cli/tests/: integration.rs
crates/ares-core/: Cargo.toml
crates/ares-core/fuzz/: Cargo.toml
crates/ares-core/fuzz/fuzz_targets/: evidence_bundle.rs  finding_merkle_leaf.rs  fuzz_target_1.rs  risk_engine.rs  static_rules_bytecode.rs
crates/ares-core/src/: cve.rs  detector.rs  error.rs  evidence.rs  finding.rs  lib.rs  program_info.rs  risk_score.rs  severity.rs  vulnerability_class.rs
crates/ares-detectors/: Cargo.toml
crates/ares-detectors/src/: cpi_tracer.rs  fuzz_adapter.rs  lib.rs  pipeline.rs  risk_engine.rs  static_rules.rs  symbolic_adapter.rs
crates/ares-evidence/: Cargo.toml
crates/ares-evidence/src/: anchorer.rs  bundler.rs  cve_bridge.rs  lib.rs
crates/ares-ingestion/: Cargo.toml
crates/ares-ingestion/src/: config.rs  indexer.rs  lib.rs  provider.rs
datasets/benchmark_corpus/: corpus.json
docs/: architecture.md  ontology.md  threat_model.md
programs/evidence_registry/: Cargo.toml
programs/evidence_registry/src/: lib.rs
python/ares_cve/: pyproject.toml
python/ares_cve/ares_cve/: __init__.py  cli.py  enricher.py
python/ares_eval/: pyproject.toml
python/ares_eval/ares_eval/: __init__.py  cli.py  corpus.py  runner.py
python/ares_family/: pyproject.toml
python/ares_family/ares_family/: __init__.py  cli.py  clusterer.py  risk_propagator.py
python/ares_llm/: pyproject.toml
python/ares_llm/ares_llm/: __init__.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  state.ts  types.ts
yara_rules/: README.md  solana_security.yar
