[workspace]
resolver = "2"
members = [
    "crates/ares-core",
    "crates/ares-ingestion",
    "crates/ares-detectors",
    "crates/ares-evidence",
    "crates/ares-api",
    "crates/ares-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daemon BlockInt Technologies"]

[workspace.dependencies]
solana-sdk = "2.2.1"
solana-client = "2.2.1"
solana-program = "2.2.1"
anchor-lang = "0.31.0"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
hex = "0.4"
base64 = "0.22"
borsh = { version = "1.5", features = ["derive"] }
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
