[package]
name = "ares-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ares-core = { path = "../ares-core" }
ares-ingestion = { path = "../ares-ingestion" }
ares-detectors = { path = "../ares-detectors" }
ares-evidence = { path = "../ares-evidence" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
