[package]
name = "ares-detectors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ares-core = { path = "../ares-core" }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
