[package]
name = "ares-evidence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ares-core = { path = "../ares-core" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
