[package]
name = "ares-ingestion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ares-core = { path = "../ares-core" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tungstenite = { workspace = true }
sled = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
async-trait = "0.1"
futures-util = "0.3"
