[package]
name = "evidence-registry"
version = "0.1.0"
description = "ARES Evidence Registry - On-chain Merkle root anchoring for audit findings"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "evidence_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
