[project]
name = "ares-eval"
version = "0.1.0"
description = "Agent Eval Lab: benchmark audit agents with precision/recall/F1 metrics"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
ares-eval = "ares_eval.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
