[project]
name = "ares-family"
version = "0.1.0"
description = "Clone detection and program family risk intelligence for Solana"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "faiss-cpu>=1.9",
    "pydantic>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
ares-family = "ares_family.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
