[project]
name = "ares-llm"
version = "0.1.0"
description = "LLM-guided semantic fuzzer for Solana business logic vulnerabilities (C1)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
