[project]
name = "ares-llm"
version = "0.1.0"
description = "LLM-guided semantic fuzzer for Solana business logic vulnerabilities (C1)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "langsmith>=0.10.4",
    "langgraph>=1.2.9",
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
